完善tcp,grpc服务的添加
